--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
     "name": "react-wizard-onboarding",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "Pretty fancy onboarding wizard for your website, made in React.",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/ChrisUser/react-wizard-onboarding.git"
+    },
     "scripts": {
         "dev": "vite",
         "build": "tsc --p ./tsconfig-build.json && vite build",
