chore: update deps and add gh-pages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "react-wizard-onboarding",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "description": "Pretty fancy onboarding wizard for your website, made in React.",
     "repository": {
         "type": "git",
@@ -8,7 +8,9 @@
     },
     "scripts": {
         "dev": "vite",
-        "build": "tsc --p ./tsconfig-build.json && vite build",
+        "build": "tsc --p ./tsconfig-build.json && vite build --mode production",
+        "build-docs": "tsc --p ./tsconfig-build-docs.json && vite build --mode docs",
+        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "test": "react-scripts test",
         "prepublishOnly": "npm run build"
     },
@@ -23,15 +25,15 @@
     ],
     "license": "MIT",
     "devDependencies": {
-        "@types/react": "^18.2.31",
-        "@types/react-dom": "^18.2.14",
+        "@types/react": "^19.0.7",
+        "@types/react-dom": "^19.0.3",
         "@vitejs/plugin-react": "^4.1.0",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
         "sass": "^1.69.4",
         "typescript": "^5.2.2",
-        "vite": "^4.5.0",
-        "vite-plugin-dts": "^3.6.0"
+        "vite": "^6.0.7",
+        "vite-plugin-dts": "^4.5.0"
     },
     "peerDependencies": {
         "react": "^18.2.0",
