--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
         "dev": "vite",
         "build": "tsc --p ./tsconfig-build.json && vite build --mode production",
         "build-docs": "tsc --p ./tsconfig-build-docs.json && vite build --mode docs",
-        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-        "test": "react-scripts test",
+        "preview": "vite preview",
         "prepublishOnly": "npm run build"
     },
     "type": "module",
@@ -23,8 +22,20 @@
     "sideEffects": [
         "**/*.css"
     ],
+    "keywords": [
+        "react",
+        "wizard-onboarding",
+        "onboarding-component"
+    ],
+    "release": {
+        "branches": [
+            "main"
+        ]
+    },
+    "author": "ChrisUser (https://github.com/ChrisUser)",
     "license": "MIT",
     "devDependencies": {
+        "@types/node": "^22.10.7",
         "@types/react": "^19.0.7",
         "@types/react-dom": "^19.0.3",
         "@vitejs/plugin-react": "^4.1.0",
@@ -38,5 +49,9 @@
     "peerDependencies": {
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
-    }
+    },
+    "bugs": {
+        "url": "https://github.com/ChrisUser/react-wizard-onboarding/issues"
+    },
+    "homepage": "https://github.com/ChrisUser/react-wizard-onboarding#readme"
 }
