--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -34,4 +34,4 @@ jobs:
                   keep_history: false
                   jekyll: false
               env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
